--- a/problems/46.permutations.md
+++ b/problems/46.permutations.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode.com/problems/permutations/description/
 
 ## 题目描述
+
 ```
 Given a collection of distinct integers, return all possible permutations.
 
@@ -20,13 +22,17 @@ Output:
 
 ```
 
+## 前置知识
+
+- 回溯法
+
 ## 思路
 
 这道题目是求集合，并不是`求极值`，因此动态规划不是特别切合，因此我们需要考虑别的方法。
 
 这种题目其实有一个通用的解法，就是回溯法。
 网上也有大神给出了这种回溯法解题的
-[通用写法](https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning))，这里的所有的解法使用通用方法解答。
+[通用写法](<https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning)>)，这里的所有的解法使用通用方法解答。
 除了这道题目还有很多其他题目可以用这种通用解法，具体的题目见后方相关题目部分。
 
 我们先来看下通用解法的解题思路，我画了一张图：
@@ -42,7 +48,7 @@ Output:
 
 ## 代码
 
-* 语言支持: Javascript, Python3
+- 语言支持: Javascript, Python3
 
 Javascript Code:
 
@@ -79,31 +85,33 @@ Javascript Code:
  *
  */
 function backtrack(list, tempList, nums) {
-    if (tempList.length === nums.length) return list.push([...tempList]);
-    for(let i = 0; i < nums.length; i++) {
-        if (tempList.includes(nums[i])) continue;
-        tempList.push(nums[i]);
-        backtrack(list, tempList, nums);
-        tempList.pop();
-    }
+  if (tempList.length === nums.length) return list.push([...tempList]);
+  for (let i = 0; i < nums.length; i++) {
+    if (tempList.includes(nums[i])) continue;
+    tempList.push(nums[i]);
+    backtrack(list, tempList, nums);
+    tempList.pop();
+  }
 }
 /**
  * @param {number[]} nums
  * @return {number[][]}
  */
-var permute = function(nums) {
-    const list = [];
-    backtrack(list, [], nums)
-    return list
+var permute = function (nums) {
+  const list = [];
+  backtrack(list, [], nums);
+  return list;
 };
 ```
+
 Python3 Code:
+
 ```Python
 class Solution:
     def permute(self, nums: List[int]) -> List[List[int]]:
         """itertools库内置了这个函数"""
         return itertools.permutations(nums)
-    
+
     def permute2(self, nums: List[int]) -> List[List[int]]:
         """自己写回溯法"""
         res = []
