--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode.com/problems/permutations-ii/description/
 
 ## 题目描述
+
 ```
 Given a collection of numbers that might contain duplicates, return all possible unique permutations.
 
@@ -17,13 +19,17 @@ Output:
 
 ```
 
+## 前置知识
+
+- 回溯法
+
 ## 思路
 
 这道题目是求集合，并不是`求极值`，因此动态规划不是特别切合，因此我们需要考虑别的方法。
 
 这种题目其实有一个通用的解法，就是回溯法。
 网上也有大神给出了这种回溯法解题的
-[通用写法](https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning))，这里的所有的解法使用通用方法解答。
+[通用写法](<https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning)>)，这里的所有的解法使用通用方法解答。
 除了这道题目还有很多其他题目可以用这种通用解法，具体的题目见后方相关题目部分。
 
 我们先来看下通用解法的解题思路，我画了一张图：
@@ -37,10 +43,9 @@ Output:
 - 回溯法
 - backtrack 解题公式
 
-
 ## 代码
 
-* 语言支持: Javascript，Python3
+- 语言支持: Javascript，Python3
 
 ```js
 /*
@@ -92,19 +97,26 @@ function backtrack(list, nums, tempList, visited) {
  * @param {number[]} nums
  * @return {number[][]}
  */
-var permuteUnique = function(nums) {
+var permuteUnique = function (nums) {
   const list = [];
-  backtrack(list, nums.sort((a, b) => a - b), [], []);
+  backtrack(
+    list,
+    nums.sort((a, b) => a - b),
+    [],
+    []
+  );
   return list;
 };
 ```
+
 Python3 code:
+
 ```Python
 class Solution:
     def permuteUnique(self, nums: List[int]) -> List[List[int]]:
         """与46题一样，当然也可以直接调用itertools的函数，然后去重"""
         return list(set(itertools.permutations(nums)))
-      
+
     def permuteUnique(self, nums: List[int]) -> List[List[int]]:
         """自己写回溯法，与46题相比，需要去重"""
         # 排序是为了去重
