--- a/problems/48.rotate-image.md
+++ b/problems/48.rotate-image.md
@@ -48,6 +48,11 @@ rotate the input matrix in-place such that it becomes:
 
 ```
 
+## 前置知识
+
+- 原地算法
+- 矩阵
+
 ## 思路
 
 这道题目让我们 in-place，也就说空间复杂度要求 O(1)，如果没有这个限制的话，很简单。
@@ -59,7 +64,7 @@ rotate the input matrix in-place such that it becomes:
 代码：
 
 ```js
-var rotate = function(matrix) {
+var rotate = function (matrix) {
   // 时间复杂度O(n^2) 空间复杂度O(n)
   const oMatrix = JSON.parse(JSON.stringify(matrix)); // clone
   const n = oMatrix.length;
@@ -71,8 +76,8 @@ var rotate = function(matrix) {
 };
 ```
 
-如果要求空间复杂度是O(1)的话，我们可以用一个temp记录即可，这个时候就不能逐个遍历了。
-比如遍历到1的时候，我们把1存到temp，然后更新1的值为7。 1被换到了3的位置，我们再将3存到temp，依次类推。
+如果要求空间复杂度是 O(1)的话，我们可以用一个 temp 记录即可，这个时候就不能逐个遍历了。
+比如遍历到 1 的时候，我们把 1 存到 temp，然后更新 1 的值为 7。 1 被换到了 3 的位置，我们再将 3 存到 temp，依次类推。
 但是这种解法写起来比较麻烦，这里我就不写了。
 
 事实上有一个更加巧妙的做法，我们可以巧妙地利用对称轴旋转达到我们的目的，如图，我们先进行一次以对角线为轴的翻转，然后
@@ -80,7 +85,7 @@ var rotate = function(matrix) {
 
 ![48.rotate-image-2](../assets/problems/48.rotate-image-2.png)
 
-这种做法的时间复杂度是O(n^2) ，空间复杂度是O(1)
+这种做法的时间复杂度是 O(n^2) ，空间复杂度是 O(1)
 
 ## 关键点解析
 
@@ -88,7 +93,7 @@ var rotate = function(matrix) {
 
 ## 代码
 
-* 语言支持: Javascript，Python3
+- 语言支持: Javascript，Python3
 
 ```js
 /*
@@ -100,7 +105,7 @@ var rotate = function(matrix) {
  * @param {number[][]} matrix
  * @return {void} Do not return anything, modify matrix in-place instead.
  */
-var rotate = function(matrix) {
+var rotate = function (matrix) {
   // 时间复杂度O(n^2) 空间复杂度O(1)
 
   // 做法： 先沿着对角线翻转，然后沿着水平线翻转
@@ -123,7 +128,9 @@ var rotate = function(matrix) {
   }
 };
 ```
+
 Python3 Code:
+
 ```Python
 class Solution:
     def rotate(self, matrix: List[List[int]]) -> None:
@@ -137,7 +144,7 @@ class Solution:
                 matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]
         for m in matrix:
             m.reverse()
-    
+
     def rotate2(self, matrix: List[List[int]]) -> None:
         """
         Do not return anything, modify matrix in-place instead.
