--- a/problems/49.group-anagrams.md
+++ b/problems/49.group-anagrams.md
@@ -22,6 +22,11 @@ All inputs will be in lowercase.
 The order of your output does not matter.
 ```
 
+## 前置知识
+
+- 哈希表
+- 排序
+
 ## 思路
 
 一个简单的解法就是遍历数组，然后对每一项都进行排序，然后将其添加到 hashTable 中，最后输出 hashTable 中保存的值即可。
@@ -31,14 +36,11 @@ The order of your output does not matter.
 代码：
 
 ```js
-var groupAnagrams = function(strs) {
+var groupAnagrams = function (strs) {
   const hashTable = {};
 
   function sort(str) {
-    return str
-      .split("")
-      .sort()
-      .join("");
+    return str.split("").sort().join("");
   }
 
   // 这个方法需要排序，因此不是很优，但是很直观，容易想到
@@ -68,7 +70,7 @@ var groupAnagrams = function(strs) {
 
 ## 代码
 
-* 语言支持: Javascript，Python3
+- 语言支持: Javascript，Python3
 
 ```js
 /*
@@ -80,7 +82,7 @@ var groupAnagrams = function(strs) {
  * @param {string[]} strs
  * @return {string[][]}
  */
-var groupAnagrams = function(strs) {
+var groupAnagrams = function (strs) {
   // 类似桶排序
 
   let counts = [];
@@ -102,7 +104,9 @@ var groupAnagrams = function(strs) {
   return Object.values(hashTable);
 };
 ```
+
 Python3 Code:
+
 ```Python
 class Solution:
     def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
