--- a/problems/62.unique-paths.md
+++ b/problems/62.unique-paths.md
@@ -1,8 +1,9 @@
-
 ## 题目地址
+
 https://leetcode.com/problems/unique-paths/description/
 
 ## 题目描述
+
 ```
 
 A robot is located at the top-left corner of a m x n grid (marked 'Start' in the diagram below).
@@ -11,6 +12,7 @@ The robot can only move either down or right at any point in time. The robot is 
 
 How many possible unique paths are there?
 ```
+
 ![](https://tva1.sinaimg.cn/large/0082zybply1gca6k99jmoj30b4053mxa.jpg)
 
 ```
@@ -33,6 +35,10 @@ Input: m = 7, n = 3
 Output: 28
 ```
 
+## 前置知识
+
+- 动态规划
+
 ## 思路
 
 这是一道典型的适合使用动态规划解决的题目，它和爬楼梯等都属于动态规划中最简单的题目，因此也经常会被用于面试之中。
@@ -47,22 +53,21 @@ Output: 28
 JS Code:
 
 ```js
- const dp = [];
-  for (let i = 0; i < m + 1; i++) {
-    dp[i] = [];
-    dp[i][0] = 0;
+const dp = [];
+for (let i = 0; i < m + 1; i++) {
+  dp[i] = [];
+  dp[i][0] = 0;
+}
+for (let i = 0; i < n + 1; i++) {
+  dp[0][i] = 0;
+}
+for (let i = 1; i < m + 1; i++) {
+  for (let j = 1; j < n + 1; j++) {
+    dp[i][j] = j === 1 ? 1 : dp[i - 1][j] + dp[i][j - 1]; // 转移方程
   }
-  for (let i = 0; i < n + 1; i++) {
-    dp[0][i] = 0;
-  }
-  for (let i = 1; i < m + 1; i++) {
-    for(let j = 1; j < n + 1; j++) {
-        dp[i][j] = j === 1 ? 1 : dp[i - 1][j] + dp[i][j - 1]; // 转移方程
-    }
-  }
+}
 
-  return dp[m][n];
-
+return dp[m][n];
 ```
 
 Python Code:
@@ -77,25 +82,25 @@ class Solution:
                 d[col][row] = d[col - 1][row] + d[col][row - 1]
 
         return d[m - 1][n - 1]
- ```
- 
- **复杂度分析**
- 
- - 时间复杂度：$O(M * N)$
- - 空间复杂度：$O(M * N)$
+```
 
-由于dp[i][j] 只依赖于左边的元素和上面的元素，因此空间复杂度可以进一步优化， 优化到O(n).
+**复杂度分析**
+
+- 时间复杂度：$O(M * N)$
+- 空间复杂度：$O(M * N)$
+
+由于 dp[i][j] 只依赖于左边的元素和上面的元素，因此空间复杂度可以进一步优化， 优化到 O(n).
 
 ![](https://tva1.sinaimg.cn/large/0082zybply1gca6l63ax7j30gr09w3zp.jpg)
 
 具体代码请查看代码区。
-
 
 当然你也可以使用记忆化递归的方式来进行，由于递归深度的原因，性能比上面的方法差不少：
 
 > 直接暴力递归的话会超时。
 
 Python3 Code:
+
 ```python
 class Solution:
     visited = dict()
@@ -108,16 +113,17 @@ class Solution:
         cnt = self.uniquePaths(m - 1, n) + self.uniquePaths(m, n - 1)
         self.visited[(m, n)] = cnt
         return cnt
- ```
+```
 
 ## 关键点
 
 - 记忆化递归
 - 基本动态规划问题
-- 空间复杂度可以进一步优化到O(n), 这会是一个考点
+- 空间复杂度可以进一步优化到 O(n), 这会是一个考点
+
 ## 代码
 
-代码支持JavaScript，Python3
+代码支持 JavaScript，Python3
 
 JavaScript Code:
 
@@ -134,13 +140,13 @@ JavaScript Code:
  * @param {number} n
  * @return {number}
  */
-var uniquePaths = function(m, n) {
+var uniquePaths = function (m, n) {
   const dp = Array(n).fill(1);
-  
-  for(let i = 1; i < m; i++) {
-    for(let j = 1; j < n; j++) {
+
+  for (let i = 1; i < m; i++) {
+    for (let j = 1; j < n; j++) {
       dp[j] = dp[j] + dp[j - 1];
-    } 
+    }
   }
 
   return dp[n - 1];
@@ -160,12 +166,13 @@ class Solution:
         return dp[n - 1]
 ```
 
- **复杂度分析**
- 
- - 时间复杂度：$O(M * N)$
- - 空间复杂度：$O(N)$
- 
- ## 扩展
- 
- 你可以做到比$O(M * N)$更快，比$O(N)$更省内存的算法么？这里有一份[资料](https://leetcode.com/articles/unique-paths/)可供参考。
- > 提示： 考虑数学
+**复杂度分析**
+
+- 时间复杂度：$O(M * N)$
+- 空间复杂度：$O(N)$
+
+## 扩展
+
+你可以做到比$O(M * N)$更快，比$O(N)$更省内存的算法么？这里有一份[资料](https://leetcode.com/articles/unique-paths/)可供参考。
+
+> 提示： 考虑数学
