--- a/problems/73.set-matrix-zeroes.md
+++ b/problems/73.set-matrix-zeroes.md
@@ -43,6 +43,10 @@ Follow up:
 
 ```
 
+## 前置知识
+
+- 状态压缩
+
 ## 思路
 
 符合直觉的想法是，使用一个 m + n 的数组来表示每一行每一列是否”全部是 0“，
@@ -55,7 +59,7 @@ Follow up:
 代码如下：
 
 ```js
-var setZeroes = function(matrix) {
+var setZeroes = function (matrix) {
   if (matrix.length === 0) return matrix;
   const m = matrix.length;
   const n = matrix[0].length;
@@ -90,32 +94,33 @@ var setZeroes = function(matrix) {
 };
 ```
 
-但是这道题目还有一个follow up， 要求使用O(1)的时间复杂度。因此上述的方法就不行了。
-但是我们要怎么去存取这些信息（哪一行哪一列应该全部为0）呢？
+但是这道题目还有一个 follow up， 要求使用 O(1)的时间复杂度。因此上述的方法就不行了。
+但是我们要怎么去存取这些信息（哪一行哪一列应该全部为 0）呢？
 
-一种思路是使用第一行第一列的数据来代替上述的zeros数组。 这样我们就不必借助额外的存储空间，空间复杂度自然就是O(1)了。
+一种思路是使用第一行第一列的数据来代替上述的 zeros 数组。 这样我们就不必借助额外的存储空间，空间复杂度自然就是 O(1)了。
 
-由于我们不能先操作第一行和第一列， 因此我们需要记录下”第一行和第一列是否全是0“这样的一个数据，最后根据这个信息去
+由于我们不能先操作第一行和第一列， 因此我们需要记录下”第一行和第一列是否全是 0“这样的一个数据，最后根据这个信息去
 修改第一行和第一列。
 
 具体步骤如下：
 
-- 记录下”第一行和第一列是否全是0“这样的一个数据
-- 遍历除了第一行和第一列之外的所有的数据，如果是0，那就更新第一行第一列中对应的元素为0
-> 你可以把第一行第一列看成我们上面那种解法使用的m + n 数组。
-- 根据第一行第一列的数据，更新matrix
-- 最后根据我们最开始记录的”第一行和第一列是否全是0“去更新第一行和第一列即可
+- 记录下”第一行和第一列是否全是 0“这样的一个数据
+- 遍历除了第一行和第一列之外的所有的数据，如果是 0，那就更新第一行第一列中对应的元素为 0
+  > 你可以把第一行第一列看成我们上面那种解法使用的 m + n 数组。
+- 根据第一行第一列的数据，更新 matrix
+- 最后根据我们最开始记录的”第一行和第一列是否全是 0“去更新第一行和第一列即可
 
 ![73.set-matrix-zeroes-2](../assets/problems/73.set-matrix-zeroes-2.png)
 
-
 ## 关键点
-- 使用第一行和第一列来替代我们m  + n 数组
-- 先记录下”第一行和第一列是否全是0“这样的一个数据，否则会因为后续对第一行第一列的更新造成数据丢失
+
+- 使用第一行和第一列来替代我们 m + n 数组
+- 先记录下”第一行和第一列是否全是 0“这样的一个数据，否则会因为后续对第一行第一列的更新造成数据丢失
 - 最后更新第一行第一列
+
 ## 代码
 
-* 语言支持：JS，Python3
+- 语言支持：JS，Python3
 
 ```js
 /*
@@ -127,7 +132,7 @@ var setZeroes = function(matrix) {
  * @param {number[][]} matrix
  * @return {void} Do not return anything, modify matrix in-place instead.
  */
-var setZeroes = function(matrix) {
+var setZeroes = function (matrix) {
   if (matrix.length === 0) return matrix;
   const m = matrix.length;
   const n = matrix[0].length;
@@ -178,9 +183,11 @@ var setZeroes = function(matrix) {
   return matrix;
 };
 ```
+
 Python3 Code:
 
-直接修改第一行和第一列为0的解法：
+直接修改第一行和第一列为 0 的解法：
+
 ```python
 class Solution:
     def setZeroes(self, matrix: List[List[int]]) -> None:
@@ -190,16 +197,16 @@ class Solution:
         def setRowZeros(matrix: List[List[int]], i:int) -> None:
             C = len(matrix[0])
             matrix[i] = [0] * C
-        
+
         def setColZeros(matrix: List[List[int]], j:int) -> None:
             R = len(matrix)
             for i in range(R):
                 matrix[i][j] = 0
-            
+
         isCol = False
         R = len(matrix)
         C = len(matrix[0])
-        
+
         for i in range(R):
             if matrix[i][0] == 0:
                 isCol = True
@@ -210,17 +217,18 @@ class Solution:
         for j in range(1, C):
             if matrix[0][j] == 0:
                 setColZeros(matrix, j)
-                
+
         for i in range(R):
             if matrix[i][0] == 0:
                 setRowZeros(matrix, i)
-        
+
         if isCol:
             setColZeros(matrix, 0)
 
 ```
 
-另一种方法是用一个特殊符合标记需要改变的结果，只要这个特殊标记不在我们的题目数据范围（0和1）即可，这里用None。
+另一种方法是用一个特殊符合标记需要改变的结果，只要这个特殊标记不在我们的题目数据范围（0 和 1）即可，这里用 None。
+
 ```python
 class Solution:
     def setZeroes(self, matrix: List[List[int]]) -> None:
