--- a/problems/85.maximal-rectangle.md
+++ b/problems/85.maximal-rectangle.md
@@ -4,11 +4,12 @@ https://leetcode-cn.com/problems/maximal-rectangle/
 
 ## 题目描述
 
-给定一个仅包含 0 和 1 的二维二进制矩阵，找出只包含 1 的最大矩形，并返回其面积。
+给定一个仅包含  0 和 1 的二维二进制矩阵，找出只包含 1 的最大矩形，并返回其面积。
 
 示例：
 
 输入：
+
 ```
 [
   ["1","0","1","0","0"],
@@ -17,7 +18,12 @@ https://leetcode-cn.com/problems/maximal-rectangle/
   ["1","0","0","1","0"]
 ]
 ```
+
 输出：6
+
+## 前置知识
+
+- 单调栈
 
 ## 思路
 
@@ -70,6 +76,7 @@ class Solution:
 ```
 
 **复杂度分析**
+
 - 时间复杂度：$O(M * N)$
 - 空间复杂度：$O(N)$
 
