--- a/problems/88.merge-sorted-array.md
+++ b/problems/88.merge-sorted-array.md
@@ -20,23 +20,25 @@ nums2 = [2,5,6],       n = 3
 输出: [1,2,2,3,5,6]
 ```
 
+## 前置知识
+
+- 归并排序
+
 ## 思路
 
 符合直觉的做法是`将nums2插到num1的末尾, 然后排序`
 
-
 具体代码：
 
 ```js
-  // 这种解法连m都用不到
-  // 这显然不是出题人的意思
-  if (n === 0) return;
-  let current2 = 0;
-  for(let i = nums1.length - 1; i >= nums1.length - n ; i--) {
-      nums1[i] = nums2[current2++];
-  }
-  nums1.sort((a, b) => a - b); // 当然你可以自己写排序，这里懒得写了，因为已经偏离了题目本身
-
+// 这种解法连m都用不到
+// 这显然不是出题人的意思
+if (n === 0) return;
+let current2 = 0;
+for (let i = nums1.length - 1; i >= nums1.length - n; i--) {
+  nums1[i] = nums2[current2++];
+}
+nums1.sort((a, b) => a - b); // 当然你可以自己写排序，这里懒得写了，因为已经偏离了题目本身
 ```
 
 这道题目其实和基本排序算法中的`merge sort`非常像，但是 merge sort 很多时候，合并的时候我们通常是
@@ -104,11 +106,10 @@ function merge(nums1, nums2) {
 
 代码支持：Python3， C++， JavaScript
 
-
 JavaSCript Code:
 
 ```js
-var merge = function(nums1, m, nums2, n) {
+var merge = function (nums1, m, nums2, n) {
   // 设置一个指针，指针初始化指向nums1的末尾（根据#62，应该是index为 m+n-1 的位置，因为nums1的长度有可能更长）
   // 然后不断左移指针更新元素
   let current = m + n - 1;
@@ -139,6 +140,7 @@ var merge = function(nums1, m, nums2, n) {
 ```
 
 C++ code:
+
 ```
 class Solution {
 public:
@@ -162,6 +164,7 @@ public:
 ```
 
 Python Code
+
 ```python
 class Solution:
     def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
@@ -185,11 +188,11 @@ class Solution:
             nums1[:n] = nums2[:n]
 ```
 
-
 **复杂度分析**
+
 - 时间复杂度：$O(M + N)$
 - 空间复杂度：$O(1)$
 
-欢迎关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
+欢迎关注我的公众号《脑洞前端》获取更多更新鲜的 LeetCode 题解
 
 ![](https://pic.leetcode-cn.com/89ef69abbf02a2957838499a96ce3fbb26830aae52e3ab90392e328c2670cddc-file_1581478989502)
