--- a/problems/98.validate-binary-search-tree.md
+++ b/problems/98.validate-binary-search-tree.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode.com/problems/validate-binary-search-tree/description/
 
 ## 题目描述
+
 ```
 Given a binary tree, determine if it is a valid binary search tree (BST).
 
@@ -10,7 +12,7 @@ Assume a BST is defined as follows:
 The left subtree of a node contains only nodes with keys less than the node's key.
 The right subtree of a node contains only nodes with keys greater than the node's key.
 Both the left and right subtrees must also be binary search trees.
- 
+
 
 Example 1:
 
@@ -35,13 +37,21 @@ Explanation: The root node's value is 5 but its right child's value is 4.
 
 ```
 
+## 前置知识
+
+- 中序遍历
+
 ## 思路
+
 ### 中序遍历
+
 这道题是让你验证一棵树是否为二叉查找树（BST）。 由于中序遍历的性质`如果一个树遍历的结果是有序数组，那么他也是一个二叉查找树(BST)`,
-我们只需要中序遍历，然后两两判断是否有逆序的元素对即可，如果有，则不是BST，否则即为一个BST。
+我们只需要中序遍历，然后两两判断是否有逆序的元素对即可，如果有，则不是 BST，否则即为一个 BST。
 
 ### 定义法
+
 根据定义，一个结点若是在根的左子树上，那它应该小于根结点的值而大于左子树最小值；若是在根的右子树上，那它应该大于根结点的值而小于右子树最大值。也就是说，每一个结点必须落在某个取值范围：
+
 1. 根结点的取值范围为（考虑某个结点为最大或最小整数的情况）：(long_min, long_max)
 2. 左子树的取值范围为：(current_min, root.value)
 3. 右子树的取值范围为：(root.value, current_max)
@@ -56,9 +66,10 @@ Explanation: The root node's value is 5 but its right child's value is 4.
 
 ### 中序遍历
 
-* 语言支持：JS，C++, Java
+- 语言支持：JS，C++, Java
 
 JavaScript Code：
+
 ```js
 /*
  * @lc app=leetcode id=98 lang=javascript
@@ -76,36 +87,35 @@ JavaScript Code：
  * @param {TreeNode} root
  * @return {boolean}
  */
-var isValidBST = function(root) {
-    if (root === null) return true;
-    if (root.left === null && root.right === null) return true;
-    const stack = [root];
-    let cur = root;
-    let pre = null;
+var isValidBST = function (root) {
+  if (root === null) return true;
+  if (root.left === null && root.right === null) return true;
+  const stack = [root];
+  let cur = root;
+  let pre = null;
 
-    function insertAllLefts(cur) {
-        while(cur && cur.left) {
-            const l = cur.left;
-            stack.push(l);
-            cur = l;
-        }
+  function insertAllLefts(cur) {
+    while (cur && cur.left) {
+      const l = cur.left;
+      stack.push(l);
+      cur = l;
     }
-    insertAllLefts(cur);
+  }
+  insertAllLefts(cur);
 
-    while(cur = stack.pop()) {
-        if (pre && cur.val <= pre.val) return false;
-        const r = cur.right;
+  while ((cur = stack.pop())) {
+    if (pre && cur.val <= pre.val) return false;
+    const r = cur.right;
 
-        if (r) {
-            stack.push(r);
-            insertAllLefts(r);
-        }
-        pre = cur;
+    if (r) {
+      stack.push(r);
+      insertAllLefts(r);
     }
+    pre = cur;
+  }
 
-    return true;
+  return true;
 };
-
 ```
 
 C++ Code：
@@ -118,7 +128,7 @@ public:
         TreeNode* prev = nullptr;
         return validateBstInorder(root, prev);
     }
-    
+
 private:
     bool validateBstInorder(TreeNode* root, TreeNode*& prev) {
         if (root == nullptr) return true;
@@ -185,7 +195,7 @@ class Solution {
 
 ### 定义法
 
-* 语言支持：C++，Python3, Java, JS
+- 语言支持：C++，Python3, Java, JS
 
 C++ Code：
 
@@ -265,15 +275,15 @@ class Solution:
         """
         if root is None:
             return True
-        
+
         is_valid_left = root.left is None or\
                    (root.left.val < root.val and area[0] < root.left.val < area[1])
         is_valid_right = root.right is None or\
                    (root.right.val > root.val and area[0] < root.right.val < area[1])
-        
+
         # 左右节点都符合，说明本节点符合要求
         is_valid = is_valid_left and is_valid_right
-        
+
         # 递归下去
         return is_valid\
             and self.isValidBST(root.left, (area[0], root.val))\
@@ -292,7 +302,7 @@ Java Code:
  *     TreeNode(int x) { val = x; }
  * }
  */
-class Solution {    
+class Solution {
     public boolean isValidBST(TreeNode root) {
         return helper(root, null, null);
     }
@@ -326,16 +336,16 @@ JavaScript Code:
  * @return {boolean}
  */
 var isValidBST = function (root) {
-    if (!root) return true;
-    return valid(root);
+  if (!root) return true;
+  return valid(root);
 };
 
 function valid(root, min = -Infinity, max = Infinity) {
-    if (!root) return true;
-    const val = root.val;
-    if (val <= min) return false;
-    if (val >= max) return false;
-    return valid(root.left, min, val) && valid(root.right, val, max)
+  if (!root) return true;
+  const val = root.val;
+  if (val <= min) return false;
+  if (val >= max) return false;
+  return valid(root.left, min, val) && valid(root.right, val, max);
 }
 ```
 
