--- a/problems/78.subsets.md
+++ b/problems/78.subsets.md
@@ -1,8 +1,9 @@
-
 ## 题目地址
+
 https://leetcode.com/problems/subsets/description/
 
 ## 题目描述
+
 ```
 Given a set of distinct integers, nums, return all possible subsets (the power set).
 
@@ -26,13 +27,17 @@ Output:
 
 ```
 
+## 前置知识
+
+- 回溯
+
 ## 思路
 
 这道题目是求集合，并不是`求极值`，因此动态规划不是特别切合，因此我们需要考虑别的方法。
 
 这种题目其实有一个通用的解法，就是回溯法。
 网上也有大神给出了这种回溯法解题的
-[通用写法](https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning))，这里的所有的解法使用通用方法解答。
+[通用写法](<https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning)>)，这里的所有的解法使用通用方法解答。
 除了这道题目还有很多其他题目可以用这种通用解法，具体的题目见后方相关题目部分。
 
 我们先来看下通用解法的解题思路，我画了一张图：
@@ -46,14 +51,13 @@ Output:
 - 回溯法
 - backtrack 解题公式
 
-
 ## 代码
 
-* 语言支持：JS，C++
+- 语言支持：JS，C++
 
 JavaScript Code:
-```js
 
+```js
 /*
  * @lc app=leetcode id=78 lang=javascript
  *
@@ -69,12 +73,12 @@ JavaScript Code:
  *
  * Given a set of distinct integers, nums, return all possible subsets (the
  * power set).
- * 
+ *
  * Note: The solution set must not contain duplicate subsets.
- * 
+ *
  * Example:
- * 
- * 
+ *
+ *
  * Input: nums = [1,2,3]
  * Output:
  * [
@@ -87,27 +91,29 @@ JavaScript Code:
  * [1,2],
  * []
  * ]
- * 
+ *
  */
 function backtrack(list, tempList, nums, start) {
-    list.push([...tempList]);
-    for(let i = start; i < nums.length; i++) {
-        tempList.push(nums[i]);
-        backtrack(list, tempList, nums, i + 1);
-        tempList.pop();
-    }
+  list.push([...tempList]);
+  for (let i = start; i < nums.length; i++) {
+    tempList.push(nums[i]);
+    backtrack(list, tempList, nums, i + 1);
+    tempList.pop();
+  }
 }
 /**
  * @param {number[]} nums
  * @return {number[][]}
  */
-var subsets = function(nums) {
-    const list = [];
-    backtrack(list, [], nums, 0);
-    return list;
+var subsets = function (nums) {
+  const list = [];
+  backtrack(list, [], nums, 0);
+  return list;
 };
 ```
+
 C++ Code：
+
 ```C++
 class Solution {
 public:
@@ -117,7 +123,7 @@ public:
         backtrack(ret, tmp, nums, 0);
         return ret;
     }
-    
+
     void backtrack(vector<vector<int>>& list, vector<int>& tempList, vector<int>& nums, int start) {
         list.push_back(tempList);
         for (auto i = start; i < nums.size(); ++i) {
@@ -138,5 +144,3 @@ public:
 - [90.subsets-ii](./90.subsets-ii.md)
 - [113.path-sum-ii](./113.path-sum-ii.md)
 - [131.palindrome-partitioning](./131.palindrome-partitioning.md)
-
-
