--- a/problems/90.subsets-ii.md
+++ b/problems/90.subsets-ii.md
@@ -1,8 +1,9 @@
-
 ## 题目地址
+
 https://leetcode.com/problems/subsets-ii/description/
 
 ## 题目描述
+
 ```
 Given a collection of integers that might contain duplicates, nums, return all possible subsets (the power set).
 
@@ -23,13 +24,17 @@ Output:
 
 ```
 
+## 前置知识
+
+- 回溯
+
 ## 思路
 
 这道题目是求集合，并不是`求极值`，因此动态规划不是特别切合，因此我们需要考虑别的方法。
 
 这种题目其实有一个通用的解法，就是回溯法。
 网上也有大神给出了这种回溯法解题的
-[通用写法](https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning))，这里的所有的解法使用通用方法解答。
+[通用写法](<https://leetcode.com/problems/combination-sum/discuss/16502/A-general-approach-to-backtracking-questions-in-Java-(Subsets-Permutations-Combination-Sum-Palindrome-Partitioning)>)，这里的所有的解法使用通用方法解答。
 除了这道题目还有很多其他题目可以用这种通用解法，具体的题目见后方相关题目部分。
 
 我们先来看下通用解法的解题思路，我画了一张图：
@@ -43,16 +48,13 @@ Output:
 - 回溯法
 - backtrack 解题公式
 
-
 ## 代码
 
-* 语言支持：JS，C++，Python3
+- 语言支持：JS，C++，Python3
 
 JavaScript Code：
 
 ```js
-
-
 /*
  * @lc app=leetcode id=90 lang=javascript
  *
@@ -68,12 +70,12 @@ JavaScript Code：
  *
  * Given a collection of integers that might contain duplicates, nums, return
  * all possible subsets (the power set).
- * 
+ *
  * Note: The solution set must not contain duplicate subsets.
- * 
+ *
  * Example:
- * 
- * 
+ *
+ *
  * Input: [1,2,2]
  * Output:
  * [
@@ -84,30 +86,37 @@ JavaScript Code：
  * ⁠ [1,2],
  * ⁠ []
  * ]
- * 
- * 
+ *
+ *
  */
 function backtrack(list, tempList, nums, start) {
-    list.push([...tempList]);
-    for(let i = start; i < nums.length; i++) {
-        // 和78.subsets的区别在于这道题nums可以有重复
-        // 因此需要过滤这种情况
-        if (i > start && nums[i] === nums[i - 1]) continue;
-        tempList.push(nums[i]);
-        backtrack(list, tempList, nums, i + 1)
-        tempList.pop();
-    }
+  list.push([...tempList]);
+  for (let i = start; i < nums.length; i++) {
+    // 和78.subsets的区别在于这道题nums可以有重复
+    // 因此需要过滤这种情况
+    if (i > start && nums[i] === nums[i - 1]) continue;
+    tempList.push(nums[i]);
+    backtrack(list, tempList, nums, i + 1);
+    tempList.pop();
+  }
 }
 /**
  * @param {number[]} nums
  * @return {number[][]}
  */
-var subsetsWithDup = function(nums) {
-    const list = [];
-    backtrack(list, [], nums.sort((a, b) => a - b), 0, [])
-    return list;
+var subsetsWithDup = function (nums) {
+  const list = [];
+  backtrack(
+    list,
+    [],
+    nums.sort((a, b) => a - b),
+    0,
+    []
+  );
+  return list;
 };
 ```
+
 C++ Code：
 
 ```C++
@@ -132,6 +141,7 @@ public:
     }
 };
 ```
+
 Python Code:
 
 ```Python
@@ -168,7 +178,3 @@ class Solution:
 - [78.subsets](./78.subsets.md)
 - [113.path-sum-ii](./113.path-sum-ii.md)
 - [131.palindrome-partitioning](./131.palindrome-partitioning.md)
-
-
-
-
