--- a/problems/94.binary-tree-inorder-traversal.md
+++ b/problems/94.binary-tree-inorder-traversal.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode.com/problems/binary-tree-inorder-traversal/description/
 
 ## 题目描述
+
 ```
 Given a binary tree, return the inorder traversal of its nodes' values.
 
@@ -17,6 +19,12 @@ Input: [1,null,2,3]
 Output: [1,3,2]
 Follow up: Recursive solution is trivial, could you do it iteratively?
 ```
+
+## 前置知识
+
+- 二叉树
+- 递归
+
 ## 思路
 
 递归的方式相对简单，非递归的方式借助栈这种数据结构实现起来会相对轻松。
@@ -34,26 +42,26 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 ![94.binary-tree-inorder-traversal](../assets/94.binary-tree-inorder-traversal.gif)
 
 (图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
+
 ## 关键点解析
 
 - 二叉树的基本操作（遍历）
-> 不同的遍历算法差异还是蛮大的
+  > 不同的遍历算法差异还是蛮大的
 - 如果非递归的话利用栈来简化操作
 
 - 如果数据规模不大的话，建议使用递归
 
 - 递归的问题需要注意两点，一个是终止条件，一个如何缩小规模
 
-1. 终止条件，自然是当前这个元素是null（链表也是一样）
+1. 终止条件，自然是当前这个元素是 null（链表也是一样）
 
 2. 由于二叉树本身就是一个递归结构， 每次处理一个子树其实就是缩小了规模，
-难点在于如何合并结果，这里的合并结果其实就是`left.concat(mid).concat(right)`,
-mid是一个具体的节点，left和right`递归求出即可`
-
+   难点在于如何合并结果，这里的合并结果其实就是`left.concat(mid).concat(right)`,
+   mid 是一个具体的节点，left 和 right`递归求出即可`
 
 ## 代码
 
-* 语言支持：JS，C++，Python3, Java
+- 语言支持：JS，C++，Python3, Java
 
 JavaScript Code：
 
@@ -72,21 +80,21 @@ JavaScript Code：
  * Testcase Example:  '[1,null,2,3]'
  *
  * Given a binary tree, return the inorder traversal of its nodes' values.
- * 
+ *
  * Example:
- * 
- * 
+ *
+ *
  * Input: [1,null,2,3]
  * ⁠  1
  * ⁠   \
  * ⁠    2
  * ⁠   /
  * ⁠  3
- * 
+ *
  * Output: [1,3,2]
- * 
+ *
  * Follow up: Recursive solution is trivial, could you do it iteratively?
- * 
+ *
  */
 /**
  * Definition for a binary tree node.
@@ -99,41 +107,40 @@ JavaScript Code：
  * @param {TreeNode} root
  * @return {number[]}
  */
-var inorderTraversal = function(root) {
-    // 1. Recursive solution
-    // if (!root) return [];
-    // const left = root.left ? inorderTraversal(root.left) : [];
-    // const right = root.right ? inorderTraversal(root.right) : [];
-    // return left.concat([root.val]).concat(right);
+var inorderTraversal = function (root) {
+  // 1. Recursive solution
+  // if (!root) return [];
+  // const left = root.left ? inorderTraversal(root.left) : [];
+  // const right = root.right ? inorderTraversal(root.right) : [];
+  // return left.concat([root.val]).concat(right);
 
-    // 2. iterative solutuon
-    if (!root) return [];
-    const stack = [root];
-    const ret = [];
-    let left = root.left;
+  // 2. iterative solutuon
+  if (!root) return [];
+  const stack = [root];
+  const ret = [];
+  let left = root.left;
 
-    let item = null; // stack 中弹出的当前项
+  let item = null; // stack 中弹出的当前项
 
-    while(left) {
-        stack.push(left);
-        left = left.left;
+  while (left) {
+    stack.push(left);
+    left = left.left;
+  }
+
+  while ((item = stack.pop())) {
+    ret.push(item.val);
+    let t = item.right;
+
+    while (t) {
+      stack.push(t);
+      t = t.left;
     }
-    
-    while(item = stack.pop()) {
-        ret.push(item.val);
-        let t = item.right;
+  }
 
-        while(t) {
-            stack.push(t);
-            t = t.left;     
-        }
-    }
-
-    return ret;
-
+  return ret;
 };
-
 ```
+
 C++ Code：
 
 ```c++
@@ -162,7 +169,9 @@ public:
     }
 };
 ```
+
 Python Code:
+
 ```Python
 # Definition for a binary tree node.
 # class TreeNode:
@@ -225,14 +234,14 @@ class Solution {
         inorder(root);
         return res;
     }
-    
+
     public void inorder (TreeNode root) {
         if (root == null) return;
-        
+
         inorder(root.left);
-        
+
         res.add(root.val);
-        
+
         inorder(root.right);
     }
 }
