--- a/problems/96.unique-binary-search-trees.md
+++ b/problems/96.unique-binary-search-trees.md
@@ -22,6 +22,11 @@ https://leetcode-cn.com/problems/unique-binary-search-trees-ii/description/
 
 ```
 
+## 前置知识
+
+- 二叉搜索树
+- 分治
+
 ## 思路
 
 这是一个经典的使用分治思路的题目。
