feat:增加前置知识标签 (#388)

--- a/problems/130.surrounded-regions.md
+++ b/problems/130.surrounded-regions.md
@@ -27,6 +27,10 @@ Surrounded regions shouldn’t be on the border, which means that any 'O' on the
 
 ```
 
+## 前置知识
+
+- DFS
+
 ## 思路
 
 我们需要将所有被X包围的O变成X，并且题目明确说了边缘的所有O都是不可以变成X的。
