--- a/problems/136.single-number.md
+++ b/problems/136.single-number.md
@@ -12,6 +12,10 @@ Note:
 Your algorithm should have a linear runtime complexity. Could you implement it without using extra memory?
 ```
 
+## 前置知识
+
+- 位运算
+
 ## 思路
 
 根据题目描述，由于加上了时间复杂度必须是 O(n)，并且空间复杂度为 O(1)的条件，因此不能用排序方法，也不能使用 map 数据结构。
