--- a/problems/155.min-stack.md
+++ b/problems/155.min-stack.md
@@ -23,8 +23,10 @@ minStack.getMin();   --> Returns -2.
 
 ```
 
-# 差值法
+## 前置知识
 
+- 差值法
+  
 ## 思路
 
 符合直觉的方法是，每次对栈进行修改操作（push和pop）的时候更新最小值。 然后getMin只需要返回我们计算的最小值即可，
