--- a/problems/172.factorial-trailing-zeroes.md
+++ b/problems/172.factorial-trailing-zeroes.md
@@ -21,6 +21,10 @@ Note: Your solution should be in logarithmic time complexity.
 
 ```
 
+## 前置知识
+
+- 递归
+  
 ## 思路
 
 我们需要求解这n个数字相乘的结果末尾有多少个0，由于题目要求log的复杂度，因此暴力求解是不行的。
