--- a/problems/191.number-of-1-bits.md
+++ b/problems/191.number-of-1-bits.md
@@ -32,6 +32,10 @@ In Java, the compiler represents the signed integers using 2's complement notati
 
 ```
 
+## 前置知识
+
+- 位运算
+  
 ## 思路
 
 这个题目的大意是： 给定一个无符号的整数， 返回其用二进制表式的时候的1的个数。
