--- a/problems/215.kth-largest-element-in-an-array.md
+++ b/problems/215.kth-largest-element-in-an-array.md
@@ -18,6 +18,11 @@ Note:
 You may assume k is always valid, 1 ≤ k ≤ array's length.
 ```
 
+## 前置知识
+
+- 堆
+- Quick Select
+  
 ## 思路
 
 这道题要求在一个无序的数组中，返回第K大的数。根据时间复杂度不同，这题有3种不同的解法。
