--- a/problems/221.maximal-square.md
+++ b/problems/221.maximal-square.md
@@ -21,6 +21,11 @@ Input:
 Output: 4
 ```
 
+## 前置知识
+
+- 动态规划
+- 递归
+  
 ## 思路
 
 ![221.maximal-square](../assets/problems/221.maximal-square-1.jpg)
