--- a/problems/229.majority-element-ii.md
+++ b/problems/229.majority-element-ii.md
@@ -19,6 +19,10 @@ Input: [1,1,1,3,3,2,2,2]
 Output: [1,2]
 ```
 
+## 前置知识
+
+- 摩尔投票法
+  
 ## 思路
 
 这道题目和[169.majority-element](./169.majority-element.md) 很像。
