--- a/problems/232.implement-queue-using-stacks.md
+++ b/problems/232.implement-queue-using-stacks.md
@@ -27,6 +27,10 @@ Depending on your language, stack may not be supported natively. You may simulat
 You may assume that all operations are valid (for example, no pop or peek operations will be called on an empty queue).
 ```
 
+## 前置知识
+
+- 栈
+  
 ## 思路
 
 这道题目是让我们用栈来模拟实现队列。 我们知道栈和队列都是一种受限的数据结构。
