--- a/problems/236.lowest-common-ancestor-of-a-binary-tree.md
+++ b/problems/236.lowest-common-ancestor-of-a-binary-tree.md
@@ -33,6 +33,10 @@ All of the nodes' values will be unique.
 p and q are different and both values will exist in the binary tree.
 ```
 
+## 前置知识
+
+- 递归
+  
 ## 思路
 
 这道题目是求解二叉树中，两个给定节点的最近的公共祖先。是一道非常经典的二叉树题目。
