--- a/problems/238.product-of-array-except-self.md
+++ b/problems/238.product-of-array-except-self.md
@@ -25,6 +25,10 @@ https://leetcode.com/problems/product-of-array-except-self/description/
 
 ```
 
+## 前置知识
+
+- 数组
+  
 ## 思路
 
 这道题的意思是给定一个数组，返回一个新的数组，这个数组每一项都是其他项的乘积。 
