--- a/problems/239.sliding-window-maximum.md
+++ b/problems/239.sliding-window-maximum.md
@@ -28,6 +28,11 @@ Follow up:
 Could you solve it in linear time?
 ```
 
+## 前置知识
+
+- 队列
+- 滑动窗口
+  
 ## 思路
 
 符合直觉的想法是直接遍历 nums, 然后然后用一个变量 slideWindow 去承载 k 个元素，
