--- a/problems/263.ugly-number.md
+++ b/problems/263.ugly-number.md
@@ -31,6 +31,10 @@ Input is within the 32-bit signed integer range: [−231,  231 − 1].
 
 ```
 
+## 前置知识
+
+- 因数分解
+  
 ## 思路
 
 题目要求给定一个数字，判断是否为“丑陋数”(ugly number), 丑陋数是指只包含质因子2, 3, 5的正整数。
