--- a/problems/283.move-zeroes.md
+++ b/problems/283.move-zeroes.md
@@ -16,6 +16,11 @@ You must do this in-place without making a copy of the array.
 Minimize the total number of operations.
 
 ```
+
+## 前置知识
+
+- 数组
+  
 ## 思路
 
 如果题目没有要求 modify in-place 的话，我们可以先遍历一遍将包含 0 的和不包含 0 的存到两个数组，
