--- a/problems/295.find-median-from-data-stream.md
+++ b/problems/295.find-median-from-data-stream.md
@@ -34,6 +34,11 @@ If 99% of all integer numbers from the stream are between 0 and 100, how would y
 
 ```
 
+## 前置知识
+
+- 堆
+- 队列
+  
 ## 思路
 
 这道题目是求动态数据的中位数，在 leetcode 难度为`hard`. 如果这道题是求静态数据的中位数，我们用数组去存储，
