--- a/problems/309.best-time-to-buy-and-sell-stock-with-cooldown.md
+++ b/problems/309.best-time-to-buy-and-sell-stock-with-cooldown.md
@@ -18,6 +18,10 @@ Output: 3
 Explanation: transactions = [buy, sell, cooldown, buy, sell]
 ```
 
+## 前置知识
+
+- 动态规划
+  
 ## 思路
 
 这是一道典型的 DP 问题， DP 问题的核心是找到状态和状态转移方程。
