--- a/problems/342.power-of-four.md
+++ b/problems/342.power-of-four.md
@@ -19,6 +19,10 @@ Follow up: Could you solve it without loops/recursion?
 
 ```
 
+## 前置知识
+
+- 数论
+
 ## 思路
 
 符合直觉的做法是不停除以 4 直到不能整除，然后判断是否为 1 即可。 代码如下：
