--- a/problems/378.kth-smallest-element-in-a-sorted-matrix.md
+++ b/problems/378.kth-smallest-element-in-a-sorted-matrix.md
@@ -23,6 +23,11 @@ Note:
 You may assume k is always valid, 1 ≤ k ≤ n2.
 ```
 
+## 前置知识
+
+- 二分查找
+- 堆
+  
 ## 思路
 
 显然用大顶堆可以解决，时间复杂度 Klogn n 为总的数字个数,
