--- a/problems/437.path-sum-iii.md
+++ b/problems/437.path-sum-iii.md
@@ -32,6 +32,10 @@ Return 3. The paths that sum to 8 are:
 3. -3 -> 11
 ```
 
+## 前置知识
+
+- hashmap
+ 
 ## 思路
 这道题目是要我们求解出任何一个节点出发到子孙节点的路径中和为指定值。
 注意这里，不一定是从根节点出发，也不一定在叶子节点结束。
