--- a/problems/454.4-sum-ii.md
+++ b/problems/454.4-sum-ii.md
@@ -26,6 +26,11 @@ The two tuples are:
 1. (0, 0, 0, 1) -> A[0] + B[0] + C[0] + D[1] = 1 + (-2) + (-1) + 2 = 0
 2. (1, 1, 0, 0) -> A[1] + B[1] + C[0] + D[0] = 2 + (-1) + (-1) + 0 = 0
 ```
+
+## 前置知识
+
+- hashTable
+
 ## 思路
 
 如果按照常规思路去完成查找需要四层遍历，时间复杂是O(n^4), 显然是行不通的。
