--- a/problems/460.lfu-cache.md
+++ b/problems/460.lfu-cache.md
@@ -28,6 +28,11 @@ cache.get(3);       // returns 3
 cache.get(4);       // returns 4
 ```
 
+## 前置知识
+
+- 链表
+- HashMap
+
 ## 思路
 
 `本题已被收录到我的新书中，敬请期待～`
