--- a/problems/102.binary-tree-level-order-traversal.md
+++ b/problems/102.binary-tree-level-order-traversal.md
@@ -25,6 +25,10 @@ https://leetcode.com/problems/binary-tree-level-order-traversal/description/
 ]
 ```
 
+## 前置知识
+
+- 队列
+
 ## 思路
 
 这是一个典型的二叉树遍历问题， 关于二叉树遍历，我总结了一个[专题](https://github.com/azl397985856/leetcode/blob/master/thinkings/binary-tree-traversal.md)，大家可以先去看下那个，然后再来刷这道题。
