--- a/problems/122.best-time-to-buy-and-sell-stock-ii.md
+++ b/problems/122.best-time-to-buy-and-sell-stock-ii.md
@@ -31,6 +31,10 @@ Output: 0
 Explanation: In this case, no transaction is done, i.e. max profit = 0.
 ```
 
+## 前置知识
+
+- 数组
+
 ## 思路
 
 由于我们是想获取到最大的利润，我们的策略应该是低点买入，高点卖出。
