--- a/problems/144.binary-tree-preorder-traversal.md
+++ b/problems/144.binary-tree-preorder-traversal.md
@@ -21,6 +21,11 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 
 ```
 
+## 前置知识
+
+- 递归
+- 栈
+
 ## 思路
 
 这道题目是前序遍历，这个和之前的`leetcode 94 号问题 - 中序遍历`完全不一回事。
