--- a/problems/152.maximum-product-subarray.md
+++ b/problems/152.maximum-product-subarray.md
@@ -20,6 +20,10 @@ https://leetcode.com/problems/maximum-product-subarray/description/
 解释: 结果不能为 2, 因为 [-2,-1] 不是子数组。
 ```
 
+## 前置知识
+
+- 滑动窗口
+
 ## 思路
 
 这道题目要我们求解连续的 n 个数中乘积最大的积是多少。这里提到了连续，笔者首先想到的就是滑动窗口，但是这里比较特殊，我们不能仅仅维护一个最大值，因此最小值（比如-20）乘以一个比较小的数（比如-10）
