--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -24,6 +24,10 @@ Explanation: Rob house 1 (money = 2), rob house 3 (money = 9) and rob house 5 (m
 
 ```
 
+## 前置知识
+
+- 动态规划
+  
 ## 思路
 
 这是一道非常典型且简单的动态规划问题，但是在这里我希望通过这个例子，
