--- a/problems/206.reverse-linked-list.md
+++ b/problems/206.reverse-linked-list.md
@@ -12,6 +12,10 @@ Follow up:
 
 A linked list can be reversed either iteratively or recursively. Could you implement both?
 
+## 前置知识
+
+- 链表
+  
 ## 思路
 这个就是常规操作了，使用一个变量记录前驱 pre，一个变量记录后继 next.
 
