--- a/problems/209.minimum-size-subarray-sum.md
+++ b/problems/209.minimum-size-subarray-sum.md
@@ -17,6 +17,10 @@ If you have figured out the O(n) solution, try coding another solution of which 
 
 ```
 
+## 前置知识
+
+- 滑动窗口
+  
 ## 思路
 
 用滑动窗口来记录序列， 每当滑动窗口中的 sum 超过 s， 就去更新最小值，并根据先进先出的原则更新滑动窗口，直至 sum 刚好小于 s
