--- a/problems/312.burst-balloons.md
+++ b/problems/312.burst-balloons.md
@@ -23,6 +23,10 @@ https://leetcode-cn.com/problems/burst-balloons/
      coins =  3*1*5      +  3*5*8    +  1*3*8      + 1*8*1   = 167
 ```
 
+## 前置知识
+
+- 回溯法
+  
 ### 思路
 
 #### 回溯法
