--- a/problems/343.integer-break.md
+++ b/problems/343.integer-break.md
@@ -18,6 +18,11 @@ https://leetcode-cn.com/problems/integer-break/
 解释: 10 = 3 + 3 + 4, 3 × 3 × 4 = 36。
 说明: 你可以假设  n  不小于 2 且不大于 58。
 
+## 前置知识
+
+- 递归
+- 动态规划
+
 ## 思路
 
 希望通过这篇题解让大家知道“题解区的水有多深”，让大家知道“什么才是好的题解”。
