--- a/problems/365.water-and-jug-problem.md
+++ b/problems/365.water-and-jug-problem.md
@@ -28,6 +28,11 @@ Output: False
   
 ## BFS（超时）
 
+## 前置知识
+
+- BFS
+- 最大公约数
+
 ### 思路
 
 两个水壶的水我们考虑成状态，然后我们不断进行倒的操作，改变状态。那么初始状态就是（0 0） 目标状态就是 （any, z）或者 (z, any)，其中any 指的是任意升水。
