--- a/problems/472.concatenated-words.md
+++ b/problems/472.concatenated-words.md
@@ -26,6 +26,10 @@ https://leetcode-cn.com/problems/concatenated-words/
 不需要考虑答案输出的顺序。
 ```
 
+## 前置知识
+
+- 前缀树
+
 ## 思路
 
 本题我的思路是直接使用前缀树来解决。**标准的前缀树模板**我在之前的题解中提到了，感兴趣的可以到下方的相关题目中查看。
