--- a/problems/494.target-sum.md
+++ b/problems/494.target-sum.md
@@ -28,6 +28,10 @@ Your output answer is guaranteed to be fitted in a 32-bit integer.
 
 ```
 
+## 前置知识
+
+- 动态规划
+
 ## 思路
 
 题目是给定一个数组，让你在数字前面添加 `+`或者`-`，使其和等于 target.
